<resources>
    <string name="app_name" translatable="false">Ah Bot</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_settings">Settings</string>
    <string name="main_welcome">Hi,</string>
    <string name="menu_signOut">Sign Out</string>
    <string name="SignIn">Sign In</string>
    <string name="Email_Phone">Email/ Phone Number</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="ForgotPassword">Forgot Password?</string>
    <string name="SignUpWith">Sign Up With</string>
    <string name="SignInWith">Sign In With</string>
    <string name="SignUp">Sign Up</string>
    <string name="AlreadyHaveAnAcc">Already Have An Account?</string>
    <string name="Google" translatable="false">Google</string>
    <string name="Facebook" translatable="false">Facebook</string>
    <string name="DontHaveAnAccount">Don\'t Have An Account?</string>
    <string name="desc_camera_source_activity">Vision detectors demo with live camera preview</string>
    <string name="desc_still_image_activity">Vision detectors demo with a still image</string>
    <string name="GoogleWebClientID" translatable="false">1017446431793-7h27tpvjht5u0n2ialh4vs0d6a7v0u4c.apps.googleusercontent.com</string>
    <string name="facebook_app_id" translatable="false">1832597463467212</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1832597463467212</string>
    <string name="title_activity_schedule">Schedule</string>
    <string name="tab_text_1">Today</string>
    <string name="tab_text_2">This Week</string>
    <string name="tab_text_3">All</string>
    <string name="main.msg.enterTask">Enter Task</string>
    <string name="main.msg.enterDueDate">Choose Date</string>
    <string name="main.msg.enterDueTime">Choose Time</string>
    <string name="Everyday">Everyday</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
