<?xml version="1.0" encoding="utf-8"?>
<!--TODO: search how to make dialog bigger-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:elevation="3dp"
    android:id="@+id/rlLoginDialog">
<TextView
    android:id="@+id/tvLoginTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_margin="5dp"
    android:text="@string/SignIn"
    android:textStyle="bold"
    android:textSize="22sp"
    android:textAlignment="center"/>
    <EditText
        android:id="@+id/etEmailPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLoginTitle"
        android:layout_marginHorizontal="10dp"
        android:drawableLeft="@drawable/logo_email_num"
        android:drawablePadding="45dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        android:hint="@string/Email_Phone"/>
    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmailPhone"
        android:layout_marginHorizontal="10dp"
        android:drawableLeft="@drawable/logo_user"
        android:drawablePadding="45dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        android:hint="@string/Username"
        android:visibility="gone"/>
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etUsername"
        android:layout_marginHorizontal="10dp"
        android:drawableLeft="@drawable/logo_pw"
        android:drawablePadding="45dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        android:hint="@string/Password"/>
    <EditText
        android:id="@+id/etCfmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_marginHorizontal="10dp"
        android:drawableLeft="@drawable/logo_pw"
        android:drawablePadding="45dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        android:hint="@string/ConfirmPassword"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etCfmPassword"
        android:text="@string/ForgotPassword"
        android:layout_alignRight="@id/etPassword"
        android:textColor="@color/colorPrimaryDark"/>
    <Button
        android:id="@+id/btnLoginSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvForgotPassword"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="3dp"
        android:background="@drawable/login_btn"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/SignIn"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="@color/offWhite"/>
    <LinearLayout
        android:id="@+id/llOr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:orientation="horizontal"
        android:layout_below="@id/btnLoginSignUp">
        <View
            android:layout_width="200px"
            android:layout_height="2px"
            android:layout_marginTop="10dp"
            android:background="#aaa"/>
        <TextView
            android:id="@+id/tvSignInUpWith"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SignInWith"
            android:layout_marginHorizontal="20dp"
            android:layout_gravity="center_horizontal"
            />
        <View
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="2px"
            android:background="#aaa"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llSocialMediaBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/llOr">
    <Button
        android:id="@+id/btn_SignInGoogle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:background="@drawable/login_btn"
        android:drawableLeft="@drawable/google_logo"
        android:paddingHorizontal="10dp"
        android:text="@string/Google"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_SignInFb"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:background="@drawable/login_btn"
        android:backgroundTint="#4267b2"
        android:textColor="#fff"
        android:drawableLeft="@drawable/fb_logo"
        android:paddingHorizontal="10dp"
        android:text="@string/Facebook"
        android:textAllCaps="false" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/llSocialMediaBtn"
        android:layout_marginVertical="20dp">
    <TextView
        android:id="@+id/tvNoAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:text="@string/DontHaveAnAccount"/>
        <TextView
            android:id="@+id/tvSignInUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SignUp"
            android:textColor="@color/colorPrimaryDark"/>
    </LinearLayout>

</RelativeLayout>